# movienight

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  config.example.json  cron_backup.sh  cron_refresh_on_flag.sh  media_list.txt  pyproject.toml  snapshot.sh
scripts/: post_discord_digest.py
src/media_backup/: __init__.py  config.py  film_matcher.py  letterboxd.py  letterboxd_ids.py  ratings.py  setup.py  snapshot.py  torrent.py  unwatched.py
