[project]
name = "media-backup"
version = "1.0.0"
description = "Automated daily snapshots of media library with metadata extraction"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "beautifulsoup4>=4.12",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8",
]
fuzzy = [
    "rapidfuzz>=3.0",
]

[project.scripts]
snapshot = "media_backup.snapshot:main"
unwatched = "media_backup.unwatched:main"
letterboxd = "media_backup.letterboxd:main"
setup-wizard = "media_backup.setup:main"
match-films = "media_backup.film_matcher:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/media_backup"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["media_backup"]
